--- a/CommentBox/test.css
+++ b/CommentBox/test.css
@@ -114,12 +114,23 @@ body {
 .commentDiv{
     /*color:black;*/
     color:#333;
-    margin-left: 40px
+    margin-left: 40px;
     font-family: Open Sans,sans-serif;
 
-
+    Background: #fff;
+    padding: 5px;
+    display: block; overflow: hidden;
+    border-top:2px solid white;
+    border-bottom:2px solid white;
 }
-
+.comment-author {
+    /*float: left;*/
+    /*width: 60px;*/
+    /*height: 60px;*/
+    font-size: 12px;
+    text-align: left;
+    margin: 0 10px 10px 0;
+}
 .btn .btn-warning .ideaButton{
     width: inherit;
     height: inherit;
