--- a/CommentBox/test.css
+++ b/CommentBox/test.css
@@ -85,7 +85,8 @@ body {
 }
 
 .ideaDiv{
-    color:blue;
+    /*color:blue;*/
+    color: #545454;
     margin: 0 auto;
 }
 .ideaDiv h1{
@@ -114,20 +115,22 @@ body {
 .commentDiv{
     /*color:black;*/
     color:#333;
-    margin-left: 40px;
+    margin-left: 25px;
     font-family: Open Sans,sans-serif;
 
     Background: #fff;
     padding: 5px;
     display: block; overflow: hidden;
     border-top:2px solid white;
-    border-bottom:2px solid white;
+    border-bottom: 1px solid #e2e2e2;
+
 }
 .comment-author {
     /*float: left;*/
     /*width: 60px;*/
     /*height: 60px;*/
     font-size: 12px;
+    font-weight: 700;
     text-align: left;
     margin: 0 10px 10px 0;
 }
