--- a/CommentBox/test.css
+++ b/CommentBox/test.css
@@ -19,8 +19,20 @@ body {
 
 .aggregate{
     background-color: aquamarine;
+    align-items: center;
     width: 80%;
     height: 30vh;
+    overflow: scroll;
+}
+
+.top{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    width: 80%;
+    height: 70px;
+    background-color:coral;
     overflow: scroll;
 }
 
@@ -29,11 +41,52 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
-    width: inherit;
+    width: 100%;
     height: 50px;
     background-color: brown;
     border: 2px;
     border-color: blueviolet
+}
+
+.t_column0{
+    width: 15%;
+    height: inherit;
+    background-color: white;
+    border: 2px;
+    border-color: beige
+}
+
+
+.t_column1{
+    width: 35%;
+    height: inherit;
+    background-color: blue;
+    border: 2px;
+    border-color: beige
+}
+
+.t_column2{
+    width: 15%;
+    height: inherit;
+    background-color: blue;
+    border: 2px;
+    border-color: beige
+}
+
+.t_column3{
+    width: 15%;
+    height: inherit;
+    background-color: blue;
+    border: 2px;
+    border-color: beige
+}
+
+.t_column4{
+    width: 20%;
+    height: inherit;
+    background-color: blue;
+    border: 2px;
+    border-color: beige
 }
 
 .c_column0{
