--- a/CommentBox/test.css
+++ b/CommentBox/test.css
@@ -19,7 +19,6 @@ body {
 }
 
 .aggregate{
-    background-color: aquamarine;
     align-items: center;
     width: 80%;
     height: 30vh;
@@ -33,7 +32,6 @@ body {
     align-items: center;
     width: 80%;
     height: 70px;
-    background-color:coral;
     overflow: scroll;
 }
 
@@ -44,110 +42,94 @@ body {
     align-items: center;
     width: 100%;
     height: 50px;
-    background-color: brown;
-    border: 2px;
-    border-color: blueviolet
+    border: 10px;
 }
 
 .t_column0{
     width: 15%;
     height: inherit;
-    background-color: white;
-    border: 2px;
-    border-color: beige
+    border: 10px;
 }
 
 
 .t_column1{
     width: 35%;
     height: inherit;
-    background-color: blue;
-    border: 2px;
-    border-color: beige
+    border: 10px;
 }
 
 .t_column2{
     width: 15%;
     height: inherit;
-    background-color: blue;
     border: 2px;
-    border-color: beige
+
 }
 
 .t_column3{
     width: 15%;
     height: inherit;
-    background-color: blue;
     border: 2px;
-    border-color: beige
 }
 
 .t_column4{
     width: 20%;
     height: inherit;
-    background-color: blue;
     border: 2px;
-    border-color: beige
 }
 
 .c_column0{
     width: 15%;
     height: inherit;
-    background-color: blue;
-    border: 2px;
-    border-color: beige
+    border: 10px;
+    border-color: black;
 }
 
 .c_column1{
     width: 35%;
     height: inherit;
-    background-color: white;
-    border: 2px;
-    border-color: beige
+    border: 10px;
+    border-color: black;
 }
 
 .c_column2{
     width: 15%;
     height: inherit;
-    background-color: chartreuse;
-    border: 2px;
-    border-color: beige
+    border: 10px;
+    border-color: black;
 }
 
 .c_column3{
     width: 15%;
     height: inherit;
-    background-color: coral;
-    border: 2px;
-    border-color: beige
+    border: 10px;
+    border-color: black;
 }
 
 .c_column4{
     width: 20%;
     height: inherit;
-    background-color: darkkhaki;
-    border: 2px;
-    border-color: beige
+    border: 10px;
+    border-color: black;
 }
 
 
 .box{
     width: 80%;
-    height: 30vh;
+    height: 50vh;
+    background-color: #ecf2f9;
     overflow: scroll;
 }
 
 .ideaDiv{
     /*color:blue;*/
     color: #545454;
-    margin: 0 auto;
+    margin: 5px auto;
 }
 .ideaDiv h1{
     font-weight: 700;
     color: #000;
     font-size: 24px;
 }
-
 
 .taskDiv{
     color:green;
@@ -168,7 +150,7 @@ body {
 .commentDiv{
     /*color:black;*/
     color:#333;
-    margin-left: 25px;
+    margin-left: 30px;
     font-family: Open Sans,sans-serif;
 
     Background: #fff;
@@ -192,12 +174,74 @@ body {
     height: inherit;
 }
 
-
 .fa-angry{
-    color: red;
+    color:#4C78A8;
     opacity: 0.5;
 }
 .fa-angry:hover{
+    opacity: .9;
+    cursor: pointer;
+}
+
+.fa-flushed{
+    color:#F58518;
+    opacity: 0.5;
+}
+.fa-flushed:hover{
+    opacity: .9;
+    cursor: pointer;
+}
+
+.fa-frown{
+    color: #E45756;
+    opacity: 0.5;
+}
+.fa-frown:hover{
+    opacity: .9;
+    cursor: pointer;
+}
+
+.fa-meh{
+    color: #72B7B2;
+    opacity: 0.5;
+}
+.fa-meh:hover{
+    opacity: .9;
+    cursor: pointer;
+}
+
+.fa-smile{
+    color: #54A24B;
+    opacity: 0.5;
+}
+.fa-smile:hover{
+    opacity: .9;
+    cursor: pointer;
+}
+
+.fa-smile-beam{
+    color: #EECA3B;
+    opacity: 0.5;
+}
+.fa-smile-beam:hover{
+    opacity: .9;
+    cursor: pointer;
+}
+
+.fa-thumbs-up{
+    color: #439894;
+    opacity: 0.5;
+}
+.fa-thumbs-up:hover{
+    opacity: .9;
+    cursor: pointer;
+}
+
+.fa-thumbs-down{
+    color: #D67195;
+    opacity: 0.5;
+}
+.fa-thumbs-down:hover{
     opacity: .9;
     cursor: pointer;
 }
