--- a/CommentBox/test.css
+++ b/CommentBox/test.css
@@ -28,7 +28,7 @@ body {
 
 .aggregate{
     align-items: center;
-    width: 80%;
+    width: 90%;
     height: 28vh;
     overflow: scroll;
 }
@@ -38,7 +38,7 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
-    width: 80%;
+    width: 90%;
     height: 6vh;
 
 }
@@ -48,7 +48,7 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
-    width: 80%;
+    width: 90%;
     height: 8vh;
     color:black
 }
@@ -89,9 +89,8 @@ body {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    align-items: center;
     width: 100%;
-    height: 50px;
+    height: 75px;
     border: 10px;
 }
 
@@ -101,28 +100,33 @@ body {
     border: 10px;
 }
 
-
 .t_column1{
-    width: 35%;
+    width: 20%;
     height: inherit;
     border: 10px;
 }
 
 .t_column2{
-    width: 15%;
+    width: 30%;
     height: inherit;
     border: 10px;
-
 }
 
 .t_column3{
     width: 15%;
     height: inherit;
     border: 10px;
+
 }
 
 .t_column4{
-    width: 20%;
+    width: 10%;
+    height: inherit;
+    border: 10px;
+}
+
+.t_column5{
+    width: 10%;
     height: inherit;
     border: solid thin;
     height: 49px;
@@ -137,16 +141,15 @@ body {
 
 
 .l_column1{
-    width: 35%;
+    width: 20%;
     height: inherit;
     border: 10px;
 }
 
 .l_column2{
-    width: 15%;
+    width: 30%;
     height: inherit;
     border: 10px;
-
 }
 
 .l_column3{
@@ -156,7 +159,13 @@ body {
 }
 
 .l_column4{
-    width: 20%;
+    width: 10%;
+    height: inherit;
+    border: 10px;
+}
+
+.l_column5{
+    width: 10%;
     height: inherit;
     border: 10px;
 }
@@ -169,14 +178,14 @@ body {
 }
 
 .c_column1{
-    width: 35%;
+    width: 20%;
     height: inherit;
     border: 10px;
     border-color: black;
 }
 
 .c_column2{
-    width: 15%;
+    width: 30%;
     height: inherit;
     border: 10px;
     border-color: black;
@@ -190,7 +199,14 @@ body {
 }
 
 .c_column4{
-    width: 20%;
+    width: 10%;
+    height: inherit;
+    border: 10px;
+    border-color: black;
+}
+
+.c_column5{
+    width: 10%;
     height: inherit;
     border: solid thin black;
     border-color: black;
@@ -199,7 +215,7 @@ body {
 }
 
 .box{
-    width: 80%;
+    width: 90%;
     height: 50vh;
     background-color: #ecf2f9;
     overflow: scroll;
@@ -370,4 +386,15 @@ body {
 .fa-comments:hover{
     opacity: .9;
     cursor: pointer;
+}
+
+.topic-body{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: stretch;
+}
+
+.topicName:hover{
+    cursor:pointer;
 }
