--- a/CommentBox/test.css
+++ b/CommentBox/test.css
@@ -19,11 +19,11 @@ body {
 }
 
 .t_svg{
-    border:solid thin white;
+    border:solid thin black;
 }
 
 .c_svg{
-    border:solid thin white;
+    border:solid thin black;
 }
 
 .aggregate{
@@ -50,7 +50,8 @@ body {
     align-items: center;
     width: 90%;
     height: 8vh;
-    color:black
+    color:black;
+    padding: 0px;
 }
 
 .label-body{
@@ -103,7 +104,7 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
-    height: 75px;
+    height: 60px;
     border: 10px;
 }
 
