--- a/CommentBox/test.css
+++ b/CommentBox/test.css
@@ -11,7 +11,7 @@ body {
 .parentDiv{
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 90%;
     width: 100%;
     justify-content: start;
     align-items: center;
@@ -19,20 +19,20 @@ body {
 }
 
 .c_svg{
-    border:solid #F2F2F2;
+    border:solid white;
     border-width: 1px;
     padding: 2px 1px 2px 1px
 }
 
 .t_svg{
-    border:solid #F2F2F2;
+    border:solid white;
     border-width: 1px;
     padding: 2px 1px 2px 1px;
 }
 
 .aggregate{
     align-items: center;
-    width: 90%;
+    width: 95%;
     height: 28vh;
     overflow: scroll;
     -ms-overflow-style: none;
@@ -44,8 +44,9 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 90%;
+    width: 95%;
     height: 36px;
+    overflow:hidden;
 }
 
 .label{
@@ -53,7 +54,7 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
-    width: 90%;
+    width: 95%;
     height: 80px;
     color:black;
     padding: 0px;
@@ -110,15 +111,16 @@ body {
     flex-wrap: wrap;
     width: 100%;
     height: 36px;
+    margin: 10px 0px 5px 0px;
 }
 
 .t_column0{
-    width: 10%;
+    width: 30%;
     height: inherit;
 }
 
 .t_column1{
-    width: 25%;
+    width: 5%;
     height: inherit;
 }
 
@@ -213,7 +215,7 @@ body {
 }
 
 .box{
-    width: 90%;
+    width: 95%;
     height: 50vh;
     background-color: #ecf2f9;
     overflow: scroll;
@@ -468,12 +470,9 @@ body {
 }
 
 .headerDiv {
-    display: flex;
-    flex-direction: row;
-    position: relative;
-    width: 20%;
-    align-items: center;
-    margin: 8px;
+    float: right;
+    width: 10%;
+    margin: 8px 35px 8px 8px;
   }
   
   .aggregate::-webkit-scrollbar{
@@ -551,11 +550,32 @@ body {
     color:black;
 }
 
-.c_column0:hover{
+.idea-Name:hover{
     border-style:solid;
     border-width:1px;
     border-color:#337AB7;
     background-color:#ECF2F9;
     border-radius: 10px;
     cursor:pointer;
+}
+
+.fa-search{
+    padding: 7px 10px;
+    background: #ddd;
+    font-size: 17px;
+    border: none;
+    cursor: pointer;
+}
+
+.navbar-toggle, .navbar-form .navbar-left{
+    padding-top:5px !important; 
+    padding-bottom:5px !important;
+}
+.navbar {
+    min-height:30px !important
+}
+
+.navbar-brand{
+    padding-top:10px !important; 
+    padding-bottom:10px !important;
 }
