--- a/CommentBox/test.css
+++ b/CommentBox/test.css
@@ -59,6 +59,7 @@ body {
     height: 80px;
     color:black;
     padding: 0px;
+    margin: 0px 0px 10px 0px;
 }
 
 .label-body{
@@ -180,7 +181,7 @@ body {
     width: 10%;
     height: inherit;
     border-color: black;
-    font-size: 0.8em;
+    font-size: 1em;
     font-weight: bold;
     padding:2px;
 }
