--- a/CommentBox/test.css
+++ b/CommentBox/test.css
@@ -89,6 +89,11 @@ body {
     padding: 5px 0;
 }
 
+.label-info-body{
+    width: 50%;
+    padding: 5px 0;
+}
+
 .label-emo-body{
     width: 20%;
     padding: 5px 0;
@@ -149,13 +154,13 @@ body {
 } */
 
 .l_column0{
-    width: 15%;
+    width: 10%;
     height: inherit;
 }
 
 
 .l_column1{
-    width: 25%;
+    width: 30%;
     height: inherit;
 }
 
