--- a/CommentBox/test.css
+++ b/CommentBox/test.css
@@ -131,7 +131,11 @@ body {
     width: 100%;
     height: 40px;
     margin: 10px 0px 10px 0px;
-    border-top: solid thin #F1F1F1;
+    /* border-top: solid thin #F1F1F1; */
+}
+
+.c_row:hover{
+    border: solid thin #D9D9D9;
 }
 
 .t_column0{
@@ -203,28 +207,28 @@ body {
     border-color: black;
     font-size: 1.2em;
     font-weight: bold;
-    padding:11px 0px 0px 0px;
+    padding:4px 0px 0px 0px;
 }
 
 .c_column1{
     width: 25%;
     height: inherit;
     border-color: black;
-    padding:14px 0px 0px 0px;
+    padding:9px 0px 0px 0px;
 }
 
 .c_column2{
     width: 35%;
     height: inherit;
     border-color: black;
-    padding: 9px 0px 0px 0px;
+    padding: 4px 0px 0px 0px;
 }
 
 .c_column3{
     width: 25%;
     height: inherit;
     border-color: black;
-    padding: 9px 0px 0px 0px;
+    padding: 4px 0px 0px 0px;
 }
 /* 
 .c_column4{
