--- a/CommentBox/test.css
+++ b/CommentBox/test.css
@@ -131,11 +131,13 @@ body {
     width: 100%;
     height: 40px;
     margin: 10px 0px 10px 0px;
+    border: solid 2px white;
+
     /* border-top: solid thin #F1F1F1; */
 }
 
 .c_row:hover{
-    border: solid thin #D9D9D9;
+    border: solid 2px darkgrey;
 }
 
 .t_column0{
@@ -619,7 +621,7 @@ body {
     border-style:solid;
     border-width:1px;
     border-color:#337AB7; 
-    border-radius: 10px;
+c_row    border-radius: 10px;
     background-color:#ECF2F9;
     cursor:pointer;
 }*/
