--- a/CommentBox/test.css
+++ b/CommentBox/test.css
@@ -272,6 +272,7 @@ body {
     background-color: #DEE5EA;
     width: inherit;
     text-align: center;
+    font-weight: 700;
     margin: 5px 0px 0px 0px;
 }
 
